PLViewer/plviewer/ConsoleParser.java
// $ANTLR 3.4 plviewer/Console.g 2012-05-29 01:17:04

package plviewer;

import java.util.Queue;
import java.util.LinkedList;

import pl3ga_pkg.mv;
import pl3ga_pkg.pl3ga;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class ConsoleParser extends CustomParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "APPLY", "ASSIGN", "CHARACTER", "COMMA", "CONST", "CONSTANT", "DIGIT", "DISPLAY", "DIV", "DOT", "EXPONENT", "FUNC", "LPAREN", "MINUS", "MULT", "NAME", "NEGATE", "NEWLINE", "NIL", "NODISPLAY", "NUMBER", "PLUS", "REVERSE", "RPAREN", "SEMICOLON", "VAR", "WEDGE", "WHITESPACE"
    };

    public static final int EOF=-1;
    public static final int APPLY=4;
    public static final int ASSIGN=5;
    public static final int CHARACTER=6;
    public static final int COMMA=7;
    public static final int CONST=8;
    public static final int CONSTANT=9;
    public static final int DIGIT=10;
    public static final int DISPLAY=11;
    public static final int DIV=12;
    public static final int DOT=13;
    public static final int EXPONENT=14;
    public static final int FUNC=15;
    public static final int LPAREN=16;
    public static final int MINUS=17;
    public static final int MULT=18;
    public static final int NAME=19;
    public static final int NEGATE=20;
    public static final int NEWLINE=21;
    public static final int NIL=22;
    public static final int NODISPLAY=23;
    public static final int NUMBER=24;
    public static final int PLUS=25;
    public static final int REVERSE=26;
    public static final int RPAREN=27;
    public static final int SEMICOLON=28;
    public static final int VAR=29;
    public static final int WEDGE=30;
    public static final int WHITESPACE=31;

    // delegates
    public CustomParser[] getDelegates() {
        return new CustomParser[] {};
    }

    // delegators


    public ConsoleParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public ConsoleParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return ConsoleParser.tokenNames; }
    public String getGrammarFileName() { return "plviewer/Console.g"; }


      protected mv applyOperator(int op, mv x) {
        switch (op) {
          case NEGATE: 
            return pl3ga.negate(x);
          case REVERSE: 
            return pl3ga.reverse(x);
          case MINUS:
            return pl3ga.subtract(new mv(), x);
          case PLUS:
          default:
            break;
        }
        return x;
      }

      protected mv applyOperator(int op, mv x, mv y) {
        switch (op) {
          case PLUS:
            return pl3ga.add(x, y);
          case MINUS:
            return pl3ga.subtract(x, y);
          case MULT:
            return pl3ga.gp(x, y);
          case DIV:
            return pl3ga.igp(x, y);
          case DOT:
            return pl3ga.lc(x, y);
          case WEDGE:
            return pl3ga.op(x, y);
          default:
            break;
        }
        return new mv();
      }


    public static class prog_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prog"
    // plviewer/Console.g:71:1: prog : ( endstat )* EOF ;
    public final ConsoleParser.prog_return prog() throws RecognitionException {
        ConsoleParser.prog_return retval = new ConsoleParser.prog_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token EOF2=null;
        ConsoleParser.endstat_return endstat1 =null;


        Object EOF2_tree=null;

        try {
            // plviewer/Console.g:71:6: ( ( endstat )* EOF )
            // plviewer/Console.g:71:8: ( endstat )* EOF
            {
            root_0 = (Object)adaptor.nil();


            // plviewer/Console.g:71:8: ( endstat )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==CONSTANT||(LA1_0 >= LPAREN && LA1_0 <= MINUS)||(LA1_0 >= NAME && LA1_0 <= NEGATE)||(LA1_0 >= NUMBER && LA1_0 <= REVERSE)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // plviewer/Console.g:71:8: endstat
            	    {
            	    pushFollow(FOLLOW_endstat_in_prog87);
            	    endstat1=endstat();

            	    state._fsp--;

            	    adaptor.addChild(root_0, endstat1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_prog90); 
            EOF2_tree = 
            (Object)adaptor.create(EOF2)
            ;
            adaptor.addChild(root_0, EOF2_tree);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "prog"


    public static class endstat_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "endstat"
    // plviewer/Console.g:73:1: endstat : s= stat t= terminator ^;
    public final ConsoleParser.endstat_return endstat() throws RecognitionException {
        ConsoleParser.endstat_return retval = new ConsoleParser.endstat_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        ConsoleParser.stat_return s =null;

        ConsoleParser.terminator_return t =null;



        try {
            // plviewer/Console.g:73:9: (s= stat t= terminator ^)
            // plviewer/Console.g:73:11: s= stat t= terminator ^
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_stat_in_endstat100);
            s=stat();

            state._fsp--;

            adaptor.addChild(root_0, s.getTree());

            pushFollow(FOLLOW_terminator_in_endstat104);
            t=terminator();

            state._fsp--;

            root_0 = (Object)adaptor.becomeRoot(t.getTree(), root_0);

            completeExpr(s.r, t.display);

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "endstat"


    public static class terminator_return extends ParserRuleReturnScope {
        public boolean display;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "terminator"
    // plviewer/Console.g:75:1: terminator returns [boolean display] : ( ( COMMA | NEWLINE | EOF ) -> DISPLAY | SEMICOLON -> NODISPLAY );
    public final ConsoleParser.terminator_return terminator() throws RecognitionException {
        ConsoleParser.terminator_return retval = new ConsoleParser.terminator_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token COMMA3=null;
        Token NEWLINE4=null;
        Token EOF5=null;
        Token SEMICOLON6=null;

        Object COMMA3_tree=null;
        Object NEWLINE4_tree=null;
        Object EOF5_tree=null;
        Object SEMICOLON6_tree=null;
        RewriteRuleTokenStream stream_SEMICOLON=new RewriteRuleTokenStream(adaptor,"token SEMICOLON");
        RewriteRuleTokenStream stream_NEWLINE=new RewriteRuleTokenStream(adaptor,"token NEWLINE");
        RewriteRuleTokenStream stream_COMMA=new RewriteRuleTokenStream(adaptor,"token COMMA");
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");

        try {
            // plviewer/Console.g:76:8: ( ( COMMA | NEWLINE | EOF ) -> DISPLAY | SEMICOLON -> NODISPLAY )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==EOF||LA3_0==COMMA||LA3_0==NEWLINE) ) {
                alt3=1;
            }
            else if ( (LA3_0==SEMICOLON) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // plviewer/Console.g:76:10: ( COMMA | NEWLINE | EOF )
                    {
                    // plviewer/Console.g:76:10: ( COMMA | NEWLINE | EOF )
                    int alt2=3;
                    switch ( input.LA(1) ) {
                    case COMMA:
                        {
                        alt2=1;
                        }
                        break;
                    case NEWLINE:
                        {
                        alt2=2;
                        }
                        break;
                    case EOF:
                        {
                        alt2=3;
                        }
                        break;
                    default:
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 0, input);

                        throw nvae;

                    }

                    switch (alt2) {
                        case 1 :
                            // plviewer/Console.g:76:11: COMMA
                            {
                            COMMA3=(Token)match(input,COMMA,FOLLOW_COMMA_in_terminator128);  
                            stream_COMMA.add(COMMA3);


                            }
                            break;
                        case 2 :
                            // plviewer/Console.g:76:19: NEWLINE
                            {
                            NEWLINE4=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_terminator132);  
                            stream_NEWLINE.add(NEWLINE4);


                            }
                            break;
                        case 3 :
                            // plviewer/Console.g:76:29: EOF
                            {
                            EOF5=(Token)match(input,EOF,FOLLOW_EOF_in_terminator136);  
                            stream_EOF.add(EOF5);


                            }
                            break;

                    }


                    retval.display = true;

                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 78:13: -> DISPLAY
                    {
                        adaptor.addChild(root_0, 
                        (Object)adaptor.create(DISPLAY, "DISPLAY")
                        );

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    // plviewer/Console.g:79:10: SEMICOLON
                    {
                    SEMICOLON6=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_terminator179);  
                    stream_SEMICOLON.add(SEMICOLON6);


                    retval.display = false;

                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 81:13: -> NODISPLAY
                    {
                        adaptor.addChild(root_0, 
                        (Object)adaptor.create(NODISPLAY, "NODISPLAY")
                        );

                    }


                    retval.tree = root_0;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "terminator"


    public static class stat_return extends ParserRuleReturnScope {
        public mv r;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "stat"
    // plviewer/Console.g:84:1: stat returns [mv r] : ( ( variable ASSIGN )+ expr -> ^( ASSIGN ( variable )* expr ) | expr );
    public final ConsoleParser.stat_return stat() throws RecognitionException {
        ConsoleParser.stat_return retval = new ConsoleParser.stat_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token ASSIGN8=null;
        ConsoleParser.variable_return variable7 =null;

        ConsoleParser.expr_return expr9 =null;

        ConsoleParser.expr_return expr10 =null;


        Object ASSIGN8_tree=null;
        RewriteRuleTokenStream stream_ASSIGN=new RewriteRuleTokenStream(adaptor,"token ASSIGN");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        RewriteRuleSubtreeStream stream_variable=new RewriteRuleSubtreeStream(adaptor,"rule variable");
        try {
            // plviewer/Console.g:84:20: ( ( variable ASSIGN )+ expr -> ^( ASSIGN ( variable )* expr ) | expr )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==NAME) ) {
                int LA5_1 = input.LA(2);

                if ( (LA5_1==EOF||LA5_1==COMMA||(LA5_1 >= DIV && LA5_1 <= DOT)||(LA5_1 >= LPAREN && LA5_1 <= MULT)||LA5_1==NEWLINE||LA5_1==PLUS||LA5_1==SEMICOLON||LA5_1==WEDGE) ) {
                    alt5=2;
                }
                else if ( (LA5_1==ASSIGN) ) {
                    alt5=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 1, input);

                    throw nvae;

                }
            }
            else if ( (LA5_0==CONSTANT||(LA5_0 >= LPAREN && LA5_0 <= MINUS)||LA5_0==NEGATE||(LA5_0 >= NUMBER && LA5_0 <= REVERSE)) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // plviewer/Console.g:84:22: ( variable ASSIGN )+ expr
                    {
                    // plviewer/Console.g:84:22: ( variable ASSIGN )+
                    int cnt4=0;
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==NAME) ) {
                            int LA4_2 = input.LA(2);

                            if ( (LA4_2==ASSIGN) ) {
                                alt4=1;
                            }


                        }


                        switch (alt4) {
                    	case 1 :
                    	    // plviewer/Console.g:84:23: variable ASSIGN
                    	    {
                    	    pushFollow(FOLLOW_variable_in_stat230);
                    	    variable7=variable();

                    	    state._fsp--;

                    	    stream_variable.add(variable7.getTree());

                    	    ASSIGN8=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_stat232);  
                    	    stream_ASSIGN.add(ASSIGN8);


                    	    }
                    	    break;

                    	default :
                    	    if ( cnt4 >= 1 ) break loop4;
                                EarlyExitException eee =
                                    new EarlyExitException(4, input);
                                throw eee;
                        }
                        cnt4++;
                    } while (true);


                    pushFollow(FOLLOW_expr_in_stat236);
                    expr9=expr();

                    state._fsp--;

                    stream_expr.add(expr9.getTree());

                    setVariable((variable7!=null?variable7.name:null), (expr9!=null?expr9.r:null)); retval.r = (expr9!=null?expr9.r:null);

                    // AST REWRITE
                    // elements: expr, ASSIGN, variable
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 84:99: -> ^( ASSIGN ( variable )* expr )
                    {
                        // plviewer/Console.g:84:102: ^( ASSIGN ( variable )* expr )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(
                        stream_ASSIGN.nextNode()
                        , root_1);

                        // plviewer/Console.g:84:111: ( variable )*
                        while ( stream_variable.hasNext() ) {
                            adaptor.addChild(root_1, stream_variable.nextTree());

                        }
                        stream_variable.reset();

                        adaptor.addChild(root_1, stream_expr.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }


                    retval.tree = root_0;

                    }
                    break;
                case 2 :
                    // plviewer/Console.g:85:8: expr
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_expr_in_stat257);
                    expr10=expr();

                    state._fsp--;

                    adaptor.addChild(root_0, expr10.getTree());

                    retval.r = (expr10!=null?expr10.r:null);

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "stat"


    public static class expr_return extends ParserRuleReturnScope {
        public mv r;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "expr"
    // plviewer/Console.g:87:1: expr returns [mv r] : x= multExpr (o= plusgrp ^y= multExpr )* ;
    public final ConsoleParser.expr_return expr() throws RecognitionException {
        ConsoleParser.expr_return retval = new ConsoleParser.expr_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        ConsoleParser.multExpr_return x =null;

        ConsoleParser.plusgrp_return o =null;

        ConsoleParser.multExpr_return y =null;



        try {
            // plviewer/Console.g:87:20: (x= multExpr (o= plusgrp ^y= multExpr )* )
            // plviewer/Console.g:87:22: x= multExpr (o= plusgrp ^y= multExpr )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_multExpr_in_expr272);
            x=multExpr();

            state._fsp--;

            adaptor.addChild(root_0, x.getTree());

            // plviewer/Console.g:87:33: (o= plusgrp ^y= multExpr )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==MINUS||LA6_0==PLUS) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // plviewer/Console.g:87:34: o= plusgrp ^y= multExpr
            	    {
            	    pushFollow(FOLLOW_plusgrp_in_expr277);
            	    o=plusgrp();

            	    state._fsp--;

            	    root_0 = (Object)adaptor.becomeRoot(o.getTree(), root_0);

            	    pushFollow(FOLLOW_multExpr_in_expr282);
            	    y=multExpr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, y.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            retval.r = applyOperator(o.token, x.r, y.r);

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "expr"


    public static class multExpr_return extends ParserRuleReturnScope {
        public mv r;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "multExpr"
    // plviewer/Console.g:89:1: multExpr returns [mv r] : x= dotExpr (o= multgrp ^y= dotExpr )* ;
    public final ConsoleParser.multExpr_return multExpr() throws RecognitionException {
        ConsoleParser.multExpr_return retval = new ConsoleParser.multExpr_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        ConsoleParser.dotExpr_return x =null;

        ConsoleParser.multgrp_return o =null;

        ConsoleParser.dotExpr_return y =null;



        try {
            // plviewer/Console.g:89:24: (x= dotExpr (o= multgrp ^y= dotExpr )* )
            // plviewer/Console.g:89:26: x= dotExpr (o= multgrp ^y= dotExpr )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_dotExpr_in_multExpr299);
            x=dotExpr();

            state._fsp--;

            adaptor.addChild(root_0, x.getTree());

            // plviewer/Console.g:89:36: (o= multgrp ^y= dotExpr )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==DIV||LA7_0==MULT) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // plviewer/Console.g:89:37: o= multgrp ^y= dotExpr
            	    {
            	    pushFollow(FOLLOW_multgrp_in_multExpr304);
            	    o=multgrp();

            	    state._fsp--;

            	    root_0 = (Object)adaptor.becomeRoot(o.getTree(), root_0);

            	    pushFollow(FOLLOW_dotExpr_in_multExpr309);
            	    y=dotExpr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, y.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            retval.r = applyOperator(o.token, x.r, y.r);

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "multExpr"


    public static class dotExpr_return extends ParserRuleReturnScope {
        public mv r;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "dotExpr"
    // plviewer/Console.g:91:1: dotExpr returns [mv r] : x= wedgeExpr (o= dotgrp ^y= wedgeExpr )* ;
    public final ConsoleParser.dotExpr_return dotExpr() throws RecognitionException {
        ConsoleParser.dotExpr_return retval = new ConsoleParser.dotExpr_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        ConsoleParser.wedgeExpr_return x =null;

        ConsoleParser.dotgrp_return o =null;

        ConsoleParser.wedgeExpr_return y =null;



        try {
            // plviewer/Console.g:91:23: (x= wedgeExpr (o= dotgrp ^y= wedgeExpr )* )
            // plviewer/Console.g:91:25: x= wedgeExpr (o= dotgrp ^y= wedgeExpr )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_wedgeExpr_in_dotExpr327);
            x=wedgeExpr();

            state._fsp--;

            adaptor.addChild(root_0, x.getTree());

            // plviewer/Console.g:91:37: (o= dotgrp ^y= wedgeExpr )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==DOT) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // plviewer/Console.g:91:38: o= dotgrp ^y= wedgeExpr
            	    {
            	    pushFollow(FOLLOW_dotgrp_in_dotExpr332);
            	    o=dotgrp();

            	    state._fsp--;

            	    root_0 = (Object)adaptor.becomeRoot(o.getTree(), root_0);

            	    pushFollow(FOLLOW_wedgeExpr_in_dotExpr337);
            	    y=wedgeExpr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, y.getTree());

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            retval.r = applyOperator(o.token, x.r, y.r);

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "dotExpr"


    public static class wedgeExpr_return extends ParserRuleReturnScope {
        public mv r;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "wedgeExpr"
    // plviewer/Console.g:93:1: wedgeExpr returns [mv r] : x= prefixed (o= wedgegrp ^y= prefixed )* ;
    public final ConsoleParser.wedgeExpr_return wedgeExpr() throws RecognitionException {
        ConsoleParser.wedgeExpr_return retval = new ConsoleParser.wedgeExpr_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        ConsoleParser.prefixed_return x =null;

        ConsoleParser.wedgegrp_return o =null;

        ConsoleParser.prefixed_return y =null;



        try {
            // plviewer/Console.g:93:25: (x= prefixed (o= wedgegrp ^y= prefixed )* )
            // plviewer/Console.g:93:27: x= prefixed (o= wedgegrp ^y= prefixed )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_prefixed_in_wedgeExpr354);
            x=prefixed();

            state._fsp--;

            adaptor.addChild(root_0, x.getTree());

            // plviewer/Console.g:93:38: (o= wedgegrp ^y= prefixed )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==WEDGE) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // plviewer/Console.g:93:39: o= wedgegrp ^y= prefixed
            	    {
            	    pushFollow(FOLLOW_wedgegrp_in_wedgeExpr359);
            	    o=wedgegrp();

            	    state._fsp--;

            	    root_0 = (Object)adaptor.becomeRoot(o.getTree(), root_0);

            	    pushFollow(FOLLOW_prefixed_in_wedgeExpr364);
            	    y=prefixed();

            	    state._fsp--;

            	    adaptor.addChild(root_0, y.getTree());

            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            retval.r = applyOperator(o.token, x.r, y.r);

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "wedgeExpr"


    public static class prefixed_return extends ParserRuleReturnScope {
        public mv r;
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "prefixed"
    // plviewer/Console.g:95:1: prefixed returns [mv r] : (o= unarygrp )? x= atom ;
    public final ConsoleParser.prefixed_return prefixed() throws RecognitionException {
        ConsoleParser.prefixed_return retval = new ConsoleParser.prefixed_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        ConsoleParser.unarygrp_return o =null;

        ConsoleParser.atom_return x =null;



        try {
            // plviewer/Console.g:95:24: ( (o= unarygrp )? x= atom )
            // plviewer/Console.g:95:26: (o= unarygrp )? x= atom
            {
            root_0 = (Object)adaptor.nil();


            // plviewer/Console.g:95:27: (o= unarygrp )?
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==MINUS||LA10_0==NEGATE||(LA10_0 >= PLUS && LA10_0 <= REVERSE)) ) {
                alt10=1;
            }
            switch (alt10) {
                case 1 :
                    // plviewer/Console.g:95:27: o= unarygrp
                    {
                    pushFollow(FOLLOW_unarygrp_in_prefixed381);
                    o=unarygrp();

                    state._fsp--;

                    adaptor.addChild(root_0, o.getTree());

                    }
                    break;

            }


            pushFollow(FOLLOW_atom_in_prefixed386);
            x=atom();

            state._fsp--;
